<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/textQuickCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="?actionBarSize"
        android:fontFamily="@font/roboto"
        android:text="@string/on_boarding_label_quick_code"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageOnBoarding1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/skipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/roboto"
        android:text="@string/on_boarding_label_skip"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textQuickCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toEndOf="@+id/textQuickCode"
        app:layout_constraintTop_toTopOf="@+id/textQuickCode" />

    <ImageView
        android:id="@+id/imageOnBoarding1"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent=".8"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:adjustViewBounds="true"
        android:src="@drawable/vector_on_boarding_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textQuickCode" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:fontFamily="@font/bebas"
        android:text="@string/on_boarding_1_title_1"
        android:textSize="@dimen/on_boarding_headline_text_size"
        app:layout_constraintStart_toStartOf="@+id/imageOnBoarding1"
        app:layout_constraintTop_toBottomOf="@+id/imageOnBoarding1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bebas"
        android:text="@string/on_boarding_1_title_2"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/on_boarding_1_main_info"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintWidth_percent=".5" />

    <ImageView
        android:id="@+id/imageDots1"
        android:layout_width="50dp"
        android:layout_height="12dp"
        android:src="@drawable/on_boarding_dots_1"
        android:layout_marginBottom="?actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>